Updated from users to Events details. thumbnail size enlargened. gallery full view, added Binding, padding with UI troublesome and focus feature

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,9 @@
         android:theme="@style/Theme.BasicFireDatabase">
         <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
+            android:exported="true"
+            android:windowSoftInputMode="adjustResize|stateHidden">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
