--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -69,9 +69,12 @@ jobs:
 
       - name: Build debug APK
         run: ./gradlew assembleDebug --no-daemon --stacktrace
-
-      - name: Upload debug APK (artifact)
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-debug-apk
-          path: app/build/outputs/apk/debug/*.apk
+          
+          # Only upload APK for main branch commits
+         - name: Upload debug APK (artifact)
+         if: github.ref == 'refs/heads/main'
+         uses: actions/upload-artifact@v4
+         with:
+           name: app-debug-apk
+           path: app/build/outputs/apk/debug/*.apk
+           retention-days: 7
