--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    name: Build (assembleDebug + unit tests)
+    name: Build (assembleDebug + unit tests, but delete APK)
     runs-on: ubuntu-latest
     timeout-minutes: 30
 
@@ -34,12 +34,9 @@ jobs:
       - name: Install Android SDK packages (platforms + build-tools)
         run: |
           yes | sdkmanager "platform-tools" "platforms;android-35" "build-tools;35.0.0"
-          # optionally install cmdline-tools if not present:
           yes | sdkmanager "cmdline-tools;latest"
 
       - name: Inject google-services.json (decoded from secret if provided)
-        # do NOT reference secrets.* in the 'if' expression to avoid parser issues;
-        # instead read secret into an env var and check at runtime in the shell.
         env:
           GS_JSON_BASE64: ${{ secrets.GOOGLE_SERVICES_JSON }}
         run: |
@@ -69,12 +66,9 @@ jobs:
 
       - name: Build debug APK
         run: ./gradlew assembleDebug --no-daemon --stacktrace
-          
-          # Only upload APK for main branch commits
-         - name: Upload debug APK (artifact)
-         if: github.ref == 'refs/heads/main'
-         uses: actions/upload-artifact@v4
-         with:
-           name: app-debug-apk
-           path: app/build/outputs/apk/debug/*.apk
-           retention-days: 7
+
+      - name: Delete generated APKs to free space
+        run: |
+          echo "Deleting generated APK files..."
+          rm -f app/build/outputs/apk/**/*.apk || true
+          rm -rf app/build/outputs || true
